[package]
name = "intruder"
author = "axshae"
version = "0.1.0"
edition = "2021"
about = "Minimal HTTP intruder with processing time visualization."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.0.27",features=["derive"]}
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
httparse = { version = "1.8.0"}

